<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="top"
        android:orientation="vertical">

        <TextView
            android:id="@+id/login_activity_title"
            android:layout_width="match_parent"
            android:layout_height="@dimen/screen_header"
            android:background="@drawable/gradient_toolbar"
            android:gravity="center"
            android:padding="@dimen/default_2x_space"
            android:text="@string/login"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/default_text_xxlarge_size"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/login_activity_alreadyAccTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/default_2x_space"
                android:text="@string/alreadyHaveAcc"
                android:textDirection="locale"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/default_text_xlarge_size" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="@dimen/default_5x_space"
                android:paddingEnd="@dimen/default_5x_space">

                <EditText
                    android:id="@+id/login_activity_emailPhoneInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:hint="@string/mobileOrEmailHint"
                    android:inputType="textPhonetic"
                    android:paddingTop="@dimen/default_2x_space"
                    android:paddingBottom="@dimen/default_2x_space"
                    android:textColor="@color/colorBlack"
                    android:textColorHint="@color/colorDimGray"
                    android:textDirection="locale"
                    android:textSize="@dimen/default_text_large_size" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/default_line_large_size"
                    android:layout_marginTop="@dimen/default_half_space"
                    android:background="@color/colorSuvaGrey" />

                <EditText
                    android:id="@+id/login_activity_pwInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_2x_space"
                    android:background="@android:color/transparent"
                    android:hint="@string/passwordHint"
                    android:inputType="textPassword"
                    android:paddingTop="@dimen/default_2x_space"
                    android:paddingBottom="@dimen/default_2x_space"
                    android:textAlignment="viewStart"
                    android:textColor="@color/colorBlack"
                    android:textColorHint="@color/colorDimGray"
                    android:textDirection="locale"
                    android:textSize="@dimen/default_text_large_size" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/default_line_large_size"
                    android:layout_marginTop="@dimen/default_half_space"
                    android:background="@color/colorSuvaGrey" />

            </LinearLayout>

            <Button
                android:id="@+id/login_activity_continueBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_2x_space"
                android:layout_marginTop="@dimen/default_4x_space"
                android:layout_marginEnd="@dimen/default_2x_space"
                android:background="@drawable/bg_button_green"
                android:text="@string/continueTitle"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/default_text_xlarge_size" />

            <TextView
                android:id="@+id/login_activity_forgetPwBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_2x_space"
                android:layout_marginTop="@dimen/default_2x_space"
                android:layout_marginEnd="@dimen/default_2x_space"
                android:padding="@dimen/default_2x_space"
                android:textDirection="locale"
                android:text="@string/forgetPw"
                android:textColor="@color/colorDimGray"
                android:textSize="@dimen/default_text_large_size" />

            <Button
                android:id="@+id/login_activity_newAccBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_2x_space"
                android:layout_marginTop="@dimen/default_4x_space"
                android:layout_marginEnd="@dimen/default_2x_space"
                android:background="@drawable/bg_button_trans_black"
                android:text="@string/createAccount"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/default_text_large_size" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/login_spinKit_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="false"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <com.github.ybq.android.spinkit.SpinKitView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/spinKitView"
            style="@style/SpinKitView.FadingCircle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:clickable="false"
            app:SpinKit_Color="@color/colorGreen" />

    </LinearLayout>
</FrameLayout>
