<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="top"
        android:orientation="vertical"
        android:weightSum="12">

        <TextView
            android:id="@+id/register_activity_title"
            android:layout_width="match_parent"
            android:layout_height="@dimen/screen_header"
            android:background="@drawable/gradient_toolbar"
            android:gravity="center"
            android:padding="@dimen/default_2x_space"
            android:text="@string/createAccount"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/default_text_xxlarge_size"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingStart="@dimen/default_5x_space"
            android:paddingTop="@dimen/default_3x_space"
            android:paddingEnd="@dimen/default_5x_space">

            <EditText
                android:id="@+id/register_activity_firstNameInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/firstName"
                android:inputType="text"
                android:textDirection="locale"
                android:paddingTop="@dimen/default_2x_space"
                android:paddingBottom="@dimen/default_2x_space"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/colorDimGray"
                android:textSize="@dimen/default_text_large_size" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/default_line_large_size"
                android:layout_marginTop="@dimen/default_half_space"
                android:background="@color/colorSuvaGrey" />

            <EditText
                android:id="@+id/register_activity_familyNameInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_2x_space"
                android:background="@android:color/transparent"
                android:hint="@string/familyName"
                android:inputType="text"
                android:textDirection="locale"
                android:paddingTop="@dimen/default_2x_space"
                android:paddingBottom="@dimen/default_2x_space"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/colorSuvaGrey"
                android:textSize="@dimen/default_text_large_size" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/default_line_large_size"
                android:layout_marginTop="@dimen/default_half_space"
                android:background="@color/colorSuvaGrey" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_2x_space"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/default_half_space"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/register_activity_phoneCode"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/kwPhoneCode"
                        android:padding="@dimen/default_2x_space"
                        android:textDirection="locale"
                        android:textColor="@color/colorBlack"
                        android:textColorHint="@color/colorSuvaGrey"
                        android:textSize="@dimen/default_text_large_size" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/default_line_large_size"
                        android:layout_marginTop="@dimen/default_half_space"
                        android:background="@color/colorSuvaGrey" />

                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/default_half_space"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/register_activity_phoneInput"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textDirection="locale"
                        android:background="@android:color/transparent"
                        android:hint="@string/mobileNo"
                        android:inputType="phone"
                        android:maxLength="8"
                        android:layout_above="@id/mobileLine"
                        android:paddingTop="@dimen/default_2x_space"
                        android:paddingBottom="@dimen/default_2x_space"
                        android:textColor="@color/colorBlack"
                        android:textColorHint="@color/colorDimGray"
                        android:textSize="@dimen/default_text_large_size" />

                    <View
                        android:id="@+id/mobileLine"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/default_line_large_size"
                        android:layout_alignParentBottom="true"
                        android:layout_marginTop="@dimen/default_half_space"
                        android:background="@color/colorSuvaGrey" />
                </RelativeLayout>
            </LinearLayout>

            <EditText
                android:id="@+id/register_activity_emailInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_2x_space"
                android:background="@android:color/transparent"
                android:hint="@string/email"
                android:textDirection="locale"
                android:inputType="textEmailAddress"
                android:paddingTop="@dimen/default_2x_space"
                android:paddingBottom="@dimen/default_2x_space"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/colorDimGray"
                android:textSize="@dimen/default_text_large_size" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/default_line_large_size"
                android:layout_marginTop="@dimen/default_half_space"
                android:background="@color/colorSuvaGrey" />

            <EditText
                android:id="@+id/register_activity_pwInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_2x_space"
                android:background="@android:color/transparent"
                android:hint="@string/passwordHint"
                android:inputType="textPassword"
                android:paddingTop="@dimen/default_2x_space"
                android:textAlignment="viewStart"
                android:textDirection="locale"
                android:paddingBottom="@dimen/default_2x_space"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/colorDimGray"
                android:textSize="@dimen/default_text_large_size" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/default_line_large_size"
                android:layout_marginTop="@dimen/default_half_space"
                android:background="@color/colorSuvaGrey" />

            <EditText
                android:id="@+id/register_activity_confirmPwInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_2x_space"
                android:background="@android:color/transparent"
                android:hint="@string/confirmPw"
                android:inputType="textPassword"
                android:paddingTop="@dimen/default_2x_space"
                android:textAlignment="viewStart"
                android:textDirection="locale"
                android:paddingBottom="@dimen/default_2x_space"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/colorDimGray"
                android:textSize="@dimen/default_text_large_size" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/default_line_large_size"
                android:layout_marginTop="@dimen/default_half_space"
                android:background="@color/colorSuvaGrey" />

            <Button
                android:id="@+id/register_activity_continueBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_4x_space"
                android:background="@drawable/bg_button_green"
                android:text="@string/continueTitle"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/default_text_large_size" />

            <TextView
                android:id="@+id/register_activity_hintTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_3x_space"
                android:text="@string/registerHint"
                android:textColor="@color/colorDimGray"
                android:textSize="@dimen/default_text_large_size" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/register_spinKit_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="false"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <com.github.ybq.android.spinkit.SpinKitView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/spinKitView"
            style="@style/SpinKitView.FadingCircle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:clickable="false"
            app:SpinKit_Color="@color/colorGreen" />

    </LinearLayout>
</FrameLayout>
